# late-delivery

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PRODUCTION_READINESS_AUDIT.md  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md  daily.md  git-ops.md  leakage-auditor.md  test-writer.md
.claude/commands/: daily.md
.claude/hooks/: guardrails.sh
.claude/skills/domain-check/: SKILL.md
.claude/skills/leakage-audit/: SKILL.md
.claude/skills/pr/: SKILL.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml  lint.yml  security.yml
.hypothesis/constants/: 06370ace890c5c61  2006bb36a1cbd718  26def2e6b74ed8a2  bdb529aaa0491509  c5d302d1d0129a05  cc5e371996585ac6  df1c00a79f045268  ec9fff6dd26626af
.kiro/specs/retail-supply-chain-optimization/: requirements.md
.kiro/steering/: architecture.md
.streamlit/: config.toml
adapters/: __init__.py
adapters/data/: api_client.py  csv_repository.py  database_repository.py
adapters/ml/: __init__.py  calibration.py  evaluation.py  feature_encoder.py  kmeans_clusterer.py  mlflow_tracker.py  pytorch_predictor.py  shap_explainer.py  sklearn_predictor.py
adapters/visualization/: plotly_charts.py
app/: streamlit_app.py
app/components/: cohort_viz.py  dataset_overview.py  model_comparison.py  prediction.py  shap_plots.py
application/: __init__.py  use_cases.py
data/metrics/: full_dataset_stats.json  full_pca_clusters.json  full_run_metrics.json
data/sample/: sample.csv
docs/: ARCHITECTURE.md  BUSINESS_IMPACT.md  FUTURE_ENHANCEMENTS.md  IMPROVEMENT_PLAN.md  LIMITATIONS_AND_DECISIONS.md  PROJECT_DEEP_DIVE.md
docs/superpowers/plans/: 2026-05-10-scaffolding-layers-2-5.md  2026-05-11-phase4-modeling-plan.md
docs/superpowers/specs/: 2026-05-11-phase4-modeling-design.md
domain/: __init__.py  exceptions.py  models.py  ports.py  services.py
notebooks/: clustering_analysis.ipynb  eda_initial.ipynb  model_evaluation_deep_dive.ipynb  train_pipeline.ipynb
reports/: model_comparison.json
scripts/: generate_notebook.py  generate_sample.py  train.py
tests/: __init__.py  conftest.py  test_calibration.py  test_csv_repository.py  test_domain_models.py  test_domain_services.py  test_properties.py  test_use_cases.py
tests/test_ml/: test_evaluation.py  test_feature_encoder.py  test_kmeans_clusterer.py  test_mlflow_tracker.py  test_shap_explainer.py  test_sklearn_predictor.py
tests/test_visualization/: test_plotly_charts.py
