[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail_supply_chain"
version = "0.1.0"
description = "Late delivery risk prediction for e-commerce orders (DataCo) — leakage-safe ML, SHAP, Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "mlflow>=2.0.0",
    "shap>=0.44.0",
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
    "loguru>=0.7.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["domain*", "adapters*", "application*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
filterwarnings = [
    "ignore::FutureWarning:mlflow.*",
    "ignore::DeprecationWarning:mlflow.*",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
    "pandas",
    "pandas.*",
    "sklearn",
    "sklearn.*",
    "xgboost",
    "xgboost.*",
    "shap",
    "shap.*",
    "mlflow",
    "mlflow.*",
    "joblib",
    "joblib.*",
    "loguru",
    "loguru.*",
    "streamlit",
    "streamlit.*",
    "plotly",
    "plotly.*",
]
ignore_missing_imports = true
follow_imports = "skip"
